make the error message Double(double) go away